# chess_rust

./: Cargo.toml  Procfile  chessworkspace.code-workspace
chess-rust/: Cargo.toml
chess-rust/src/: lib.rs
chess-server/: Cargo.toml
chess-server/src/: main.rs  structures.rs  utils.rs
chess-yew/: Cargo.toml  index.html
chess-yew/src/: app.rs  main.rs
chess-yew/src/agent/: mod.rs  socket_agent.rs
chess-yew/src/components/: avatar.rs  chess_board.rs  game.rs  home.rs  mod.rs  peer.rs  piece.rs  room.rs
chess-yew/src/types/: structures.rs
chess-yew/styles/: style.css
