[package]
name = "chess-yew"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
log = "0.4.6"
wasm-logger = "0.2.0"
chess-rust = {path = "../chess-rust"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
wasm-bindgen = { version = "0.2" }
js-sys = "0.3.42"
yew-router = "0.14"
lazy_static = "1.4"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'HtmlInputElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'DomRect',
  'TouchEvent',
  'TouchList',
  'Touch',
  'BinaryType',
  'CloseEvent',
]
